default/objects/User__c/fields/Main_Company__c.field-meta.xml
<CustomField>
    <fullName>Main_Company__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Main Company</label>
    <referenceTo>Main_Company__c</referenceTo>
    <relationshipLabel>Users</relationshipLabel>
    <relationshipName>Users</relationshipName>
    <type>Lookup</type>
</CustomField>