default/objects/User__c/fields/User_Role__c.field-meta.xml
<CustomField>
    <fullName>User_Role__c</fullName>
    <label>Role</label>
    <referenceTo>User_Role__c</referenceTo>
    <relationshipLabel>Users</relationshipLabel>
    <relationshipName>Users</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>